--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,8 +4,10 @@
     cmd: "{{ grub_update_grub_command }}"
   when:
     - ansible_connection not in [ "container", "docker", "community.docker.docker" ]
-#  notify:
-#    - Reboot
-#
-#- name: Reboot
-#  ansible.builtin.reboot:
+  notify:
+    - Reboot
+
+- name: Reboot
+  ansible.builtin.reboot:
+  when:
+    - grub_reboot|bool
